Projet OK Kathara

--- a/staticwebserver/var/www/html/index.html
+++ b/staticwebserver/var/www/html/index.html
@@ -1,1 +1,1 @@
-Hello From Kathara Apache 2 Container  StaticWebServer
+Hello From Kathara Apache 2 Container  StaticWebServer Realised By Halim BOUHOUI
